5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2496.log
== TEST (2019-05-14 18:17:56) 
-- CODE:
n = int(input("digite o numero: "))
z = n + 1
soma = soma + z
while (n != -1):
	z = n + 1
	soma = soma + z
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    soma = soma + z
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:18:05) 
-- CODE:
n = int(input("digite o numero: "))
z = n + 1
soma = soma + z
while (n != -1):
	z = n + 1
	soma = soma + z
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    soma = soma + z
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:33) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:20:39) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
	print(soma)
-- EXECUTION TIME:
0.142776
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:41) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:20:52) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
	print(soma)
-- EXECUTION TIME:
0.177292
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:52) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:01) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	n = int(input("digite o numero: "))
	soma = soma + n
	print(soma)
-- OUTPUT:
1075
1408
1399
1398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:08) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	n = int(input("digite o numero: "))
	soma = soma + n
	print(soma)
-- OUTPUT:
1075
1408
1399
1398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:15) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	print(soma)
	n = int(input("digite o numero: "))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:21:19) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	print(soma)
	n = int(input("digite o numero: "))
-- EXECUTION TIME:
0.183266
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:20) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	print(soma)
	n = int(input("digite o numero: "))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:46) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:21:51) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
print(soma)

-- EXECUTION TIME:
0.123505
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
